--- a/static/src/scss/_constants.scss
+++ b/static/src/scss/_constants.scss
@@ -1,5 +1,9 @@
 $c-background: white;
-
+$c-blue: #028CFE;
+$c-white: white;
+$c-green: #0BC477;
+$c-purple: #7246DC;
+$c-black: #333333;
 
 // Transitions
 
