--- a/static/src/scss/main.scss
+++ b/static/src/scss/main.scss
@@ -1,7 +1,9 @@
 @import 'bourbon';
+@import '_utils';
 @import '_constants';
 @import '_mixins';
 @import '_base';
 @import '_layout';
 @import '_components';
+@import '_sections';
 @import '_pages';
