--- a/static/src/scss/_components.scss
+++ b/static/src/scss/_components.scss
@@ -1,3 +1,5 @@
 @import '_components/_PageHeader';
+@import '_components/_PageFooter';
 @import '_components/_PrimaryCTA';
 @import '_components/_Point';
+@import '_components/_Package';
