--- a/static/src/scss/_sections.scss
+++ b/static/src/scss/_sections.scss
@@ -1,3 +1,6 @@
 @import '_sections/SectionHero';
 @import '_sections/SectionPartners';
 @import '_sections/SectionPoints';
+@import '_sections/SectionPricing';
+@import '_sections/SectionSpecs';
+@import '_sections/SectionGallery';
