--- a/static/src/scss/_sections/_SectionHero.scss
+++ b/static/src/scss/_sections/_SectionHero.scss
@@ -24,8 +24,10 @@
         }
         &__SpecCTA {
             margin-left: 1.5em;
+            font-family: Montserrat;
             &:after {
                 background: white;
+                height: 0.15em;
             }
         }
     }
