--- a/static/src/scss/_components/_PageHeader.scss
+++ b/static/src/scss/_components/_PageHeader.scss
@@ -20,6 +20,7 @@
         color: $c-black;
 
         div {
+            color: $c-purple;
             position: relative;
             margin-left: 1em;
             max-width: 15em;
