slight changes to siggraph block

--- a/static/src/scss/_components/_PageHeader.scss
+++ b/static/src/scss/_components/_PageHeader.scss
@@ -20,7 +20,7 @@
         color: $c-black;
 
         div {
-            color: $c-purple;
+            color: $c-blue;
             position: relative;
             margin-left: 1em;
             max-width: 15em;
