Added designer and gallery sections

--- a/static/src/scss/_components/_PageFooter.scss
+++ b/static/src/scss/_components/_PageFooter.scss
@@ -4,7 +4,8 @@
     padding: 1em 0;
 
     &__logo {
-        width: 9em;
+        width: 7em;
+        margin-bottom: 0.5em;
     }
 
     a, a:visited {
