added popup for contact sales, fixed logo in footer, fixed typos, added scans to the gallery, fixed perspective on 3 steps section.

--- a/static/src/scss/_components.scss
+++ b/static/src/scss/_components.scss
@@ -3,3 +3,5 @@
 @import '_components/_PrimaryCTA';
 @import '_components/_Point';
 @import '_components/_Package';
+
+@import '_components/_EmailModal';
