--- a/static/src/scss/_sections/_SectionGallery.scss
+++ b/static/src/scss/_sections/_SectionGallery.scss
@@ -46,7 +46,7 @@
 
     &__scan {
         position: relative;
-        margin: 1em;
+        margin: 0.2em;
         width: 17em;
         height: 15em;
         cursor: pointer;
@@ -57,6 +57,17 @@
 
         &:hover {
             box-shadow: 0 0.4em 1em rgba(0,0,0,0.3);
+        }
+    }
+
+    @media (max-width: 600px) {
+        &__title {
+            font-size: 1.5em;
+        }
+    }
+    @media (max-width: 620px) {
+        &__scan {
+            width: 70%;
         }
     }
 }
