--- a/static/src/scss/_sections/_SectionHero.scss
+++ b/static/src/scss/_sections/_SectionHero.scss
@@ -12,6 +12,7 @@
 
         h1 {
             margin-bottom: 0em;
+            line-height: 1.2em;
         }
 
         p {
@@ -38,6 +39,31 @@
 
         img {
             width: 100%;
+        }
+    }
+
+    @media (max-width: 700px) {
+        &__scanner {
+            display: none;
+        }
+        text-align: center;
+
+        &__description {
+            @include align-items(center);
+            margin: 5em 0;
+
+            &__actions {
+                @include flex-wrap(wrap);
+                @include justify-content(center);
+            }
+
+            &__SpecCTA {
+                margin-top: 1em;
+            }
+        }
+
+        .inner {
+            min-height: initial;
         }
     }
 }
