--- a/static/src/scss/_sections/_SectionPricing.scss
+++ b/static/src/scss/_sections/_SectionPricing.scss
@@ -15,4 +15,20 @@
         @include size(400% 200%);
         @include transform(translateY(1em) rotate(-6deg));
     }
+
+    @media (max-width: 600px) {
+        &__packages {
+            @include flex-wrap(wrap);
+        }
+
+        .Package--active {
+            left:0;
+        }
+
+        .Package {
+            border: 0.4em solid $c-blue;
+        }
+
+        padding-top: 2em;
+    }
 }
