--- a/static/src/scss/_sections/_SectionSteps.scss
+++ b/static/src/scss/_sections/_SectionSteps.scss
@@ -42,4 +42,25 @@
     &__step + &__step {
         margin-top: 1em;
     }
+
+    @media (max-width: 600px) {
+        &__title {
+            font-size: 1.5em;
+
+            span {
+                display: block;
+            }
+        }
+        padding-top: 1em;
+
+        &__steps {
+            @include flex-direction(column-reverse);
+        }
+
+        &__image {
+            width: 80%;
+            margin: 0;
+            margin-bottom: 2em;
+        }
+    }
 }
